# DataAnchor

./: pyproject.toml  setup.py
.github/workflows/: python-publish.yml  release.yaml
DataAnchor.egg-info/: PKG-INFO  SOURCES.txt
data_anchor/: __init__.py  core.py
data_anchor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: basic_usage.py
