[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-anchor"
version = "1.0.0"
description = "A Python library for shared memory synchronization with dataclasses."
readme = "README.md"
license = { text = "MIT" }
homepage = "https://github.com/GitMohit007/DataAnchor"
repository = "https://github.com/GitMohit007/DataAnchor"

authors = [
    { name = "GitMohit007", email = "your_email@example.com" }
]
keywords = ["shared-memory", "ipc", "dataclasses", "python"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.8"
